--- a/indexB.html
+++ b/indexB.html
@@ -49,7 +49,7 @@
     </footer>
 
     <!-- Link para o arquivo JavaScript externo -->
-    <script src="script.js"></script>
+    <script src="scriptB.js"></script>
 </body>
 
 </html>
