Fixed name and title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!-- Garante a renderização adequada e o zoom de toque para todos os dispositivos -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coleção de Itens</title>
+    <title>Minha Coleção</title>
     <!-- Link para o arquivo CSS externo -->
     <link rel="stylesheet" href="stylesB.css">
 </head>
