Adicionado Script para Analytics do Vercel
Linha 61.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 
     <!-- Link para o arquivo JavaScript externo -->
     <script src="scriptB.js"></script>
+    
+    <!-- Script para Analytics do Vercel -->
+    <script defer src="https://vercel.live/_vercel/insights/script.js"></script>
 </body>
 
 </html>
